[gd_scene load_steps=3 format=3 uid="uid://bbbkidvgnnavv"]

[ext_resource type="Script" uid="uid://djvd1fp1hmf5s" path="res://scripts/copied_item_bar.gd" id="1_88ebs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88ebs"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.333333, 0.6, 0.6, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="CopiedItemBar" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_88ebs")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Paste" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "粘贴"

[node name="Copy" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "复制"

[node name="Delete" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "删除"

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_88ebs")

[node name="Type" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "类型"
horizontal_alignment = 1

[node name="Name" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "名字"

[connection signal="button_up" from="MarginContainer/HBoxContainer/Paste" to="." method="_on_paste_button_up"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/Copy" to="." method="_on_copy_button_up"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/Delete" to="." method="_on_delete_button_up"]
